@@ -26,7 +26,6 @@ import org.springframework.boot.actuate.health.Status;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Builder
 @RequiredArgsConstructor
@@ -58,15 +57,19 @@ public class FeatureIndicator implements HealthIndicator {
                                                      .monitored(feature.isMonitored())
                                                      .enabledByDefault(feature.isEnabledByDefault())
                                                      .build())
-                       .collect(Collectors.toList());
+                       .toList();
     }
 
-    private Status resolveStatus(final List<FeatureContext> features) {
-        FeatureContext.Status status = FeatureContext.Status.UNKNOWN;
+    protected Status resolveStatus(final List<FeatureContext> features) {
+        final var currentFeatures = Optional.ofNullable(features).orElse(List.of());
+        FeatureContext.Status status = Optional.of(currentFeatures)
+                                               .filter(List::isEmpty)
+                                               .map(i -> FeatureContext.Status.UP)
+                                               .orElse(FeatureContext.Status.UNKNOWN);
 
-        for (FeatureContext feature : Optional.ofNullable(features).orElse(List.of())) {
-            final FeatureContext.Status currentStatus =
-                    feature.getStatus() == null ? FeatureContext.Status.UNKNOWN : feature.getStatus();
+        for (FeatureContext feature : currentFeatures) {
+            final FeatureContext.Status currentStatus = Optional.ofNullable(feature.getStatus())
+                                                                .orElse(FeatureContext.Status.UNKNOWN);
             if (currentStatus.ordinal() > status.ordinal()) {
                 status = currentStatus;
             }
